spacing fix

--- a/histarchexplorer/static/css/main.css
+++ b/histarchexplorer/static/css/main.css
@@ -12332,7 +12332,7 @@ textarea.form-control-lg {
   display: block;
   margin: 5px;
   position: absolute;
-  width: calc((100% - 30px) / 3);
+  width: calc((100% - 20px) / 3);
   background: var(--muuri-tile);
   overflow: hidden;
   border-radius: 7.5px;
@@ -12340,7 +12340,7 @@ textarea.form-control-lg {
 
 @media (max-width: 1400px) {
   .item {
-    width: calc((100% - 40px) / 2);
+    width: calc((100% - 30px) / 2);
   }
 }
 @media (max-width: 766px) {
@@ -12365,7 +12365,7 @@ textarea.form-control-lg {
   }
 }
 .item-5-6 {
-  width: calc((100% - 30px) / 3 / 2 * 5 + 10px);
+  width: calc((100% - 20px) / 3 / 2 * 5 + 10px);
 }
 
 @media (max-width: 766px) {
@@ -12387,7 +12387,7 @@ textarea.form-control-lg {
 
 @media (max-width: 1400px) {
   .item-half {
-    width: calc(((100% - 20px) / 2 - 10px) / 2);
+    width: calc((100% - 10px) / 2 / 2);
   }
 }
 @media (max-width: 766px) {
@@ -12414,13 +12414,13 @@ textarea.form-control-lg {
   .item-half,
   .item-middle,
   .item-fit {
-    width: calc((100% - 40px) / 2);
+    width: calc((100% - 10px) / 2);
   }
   .item-wide {
-    width: calc(100% - 20px);
+    width: calc(100% - 10px);
   }
   .item-5-6 {
-    width: calc(100% - 20px);
+    width: calc(100% - 10px);
   }
 }
 .item-fit {
