--- a/histarchexplorer/static/scss/components/landing.scss
+++ b/histarchexplorer/static/scss/components/landing.scss
@@ -27,7 +27,7 @@
   display: block;
   margin: 5px;
   position: absolute;
-  width: calc((100% - 30px) / 3);
+  width: calc((100% - 20px) / 3);
   background: var(--muuri-tile);
   overflow: hidden;
   border-radius: 7.5px;
@@ -35,7 +35,7 @@
 
 @media (max-width: 1400px) { // Below col-md breakpoint
   .item {
-    width: calc((100% - 40px ) / 2); // 2 tiles
+    width: calc((100% - 30px ) / 2); // 2 tiles
   }
 }
 
@@ -64,7 +64,7 @@
 }
 
 .item-5-6 {
-  width: calc(((((100% - 30px) / 3) / 2) * 5 + 10px));
+  width: calc(((((100% - 20px) / 3) / 2) * 5 + 10px));
 }
 
 @media (max-width: 766px) {
@@ -87,7 +87,7 @@
 
 @media (max-width: 1400px) {
   .item-half {
-    width: calc((((100% - 20px) / 2) - 10px) / 2);
+    width: calc(((100% - 10px) / 2) / 2);
   }
 }
 
@@ -118,14 +118,14 @@
   .item-half,
   .item-middle,
   .item-fit {
-    width: calc((100% - 40px) / 2); // zwei Spalten
+    width: calc((100% - 10px) / 2); // zwei Spalten
   }
 
   .item-wide {
-    width: calc(100% - 20px); // volle Breite
+    width: calc(100% - 10px); // volle Breite
   }
     .item-5-6 {
-    width: calc(100% - 20px); // volle Breite
+    width: calc(100% - 10px); // volle Breite
   }
 }
 
